--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="row">
             <div class="col-md-1"></div>
             <div class="col-md-4 contact_form">
-                <h1 class="social_head">Getting in TOuch is Easy</h1>
+                <h1 class="social_head">Getting in TOuch is Easy!</h1>
                 
                 <div class="social-icons">
                 <a href="tel:+918527409562"><i class="fa fa-phone"> +91 8527409562</i></a>
