text added in gallery and services

--- a/services.html
+++ b/services.html
@@ -27,6 +27,7 @@
 
     <div class="service2">
         <h1 class="about_head">My Services</h1>
+        <p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor, porro iste cumque architecto repellendus nesciunt perspiciatis, perferendis blanditiis explicabo voluptatum aliquam illum, recusandae officiis. Asperiores eius quibusdam id ab!</p>
         <div class="container">
             <div class="row service_card">
                 <div class="col-md-4 card_box">
