--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
     <section id="gallery">
         <div class="container">
             <h1 class="gallery-text">GALLARY</h1>
+            <p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem dolor, porro iste cumque architecto repellendus nesciunt perspiciatis, perferendis blanditiis explicabo voluptatum aliquam illum, recusandae officiis. Asperiores eius quibusdam id ab!</p>
             <div class="row gallery">
                 <div class="col-md-4 gallery-block">
                     <a href="images/bg1.jpg"><img src="images/bg1.jpg" class="gallery-image" alt="" srcset=""></a>
