--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 
                 <div class="social-icons">
                 <a href="tel:+918527409562"><i class="fa fa-phone"> +91 8527409562</i></a>
-                <a href="#"><i class="fa fa-facebook"></i> Facebook Profile</a>
-                <a href="#"><i class="fa fa-instagram danger"></i> Instagram Profile</a>
-                <a href="#"><i class="fa fa-youtube danger"></i> Youtube Channel</a>
-                <a href="#"><i class="fa fa-linkedin"></i> LinkedIn Profile</a>
+                <a href="https://www.facebook.com/chefmanishnautiyal"><i class="fa fa-facebook"></i> Facebook Profile</a>
+                <a href="https://www.instagram.com/chefmanishnautiyal/"><i class="fa fa-instagram danger"></i> Instagram Profile</a>
+                <a href="https://www.youtube.com/channel/UCuL_nnCTKssdOW1RzbYp3xg"><i class="fa fa-youtube danger"></i> Youtube Channel</a>
+                <a href="https://www.linkedin.com/in/manish-nautiyal-92054ba3/"><i class="fa fa-linkedin"></i> LinkedIn Profile</a>
                 </div>
             </div>
             <div class="col-md-1"></div>
@@ -149,7 +149,7 @@
 <footer>
     <div class="footer">
         <h1>Copyright All Rights are reservered 2021</h1>
-        <h1>Created by <a href="#">Shubham Rathor</a></h1>
+        <h1>Created by <a href="https://rshubham-site.netlify.app/">Shubham Rathor</a></h1>
     </div>
 </footer>
     <!-- script -->
