added bot script

--- a/index.html
+++ b/index.html
@@ -173,5 +173,6 @@
         }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="//code.tidio.co/h1pc42azs1y5lc6ehjxughfo3hhfmjbv.js" async></script>
 </body>
 </html>
